[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langchain-core>=1.2.19",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.11",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
]
