[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.4.1",
    "ddgs>=9.11.4",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "ipykernel>=7.2.0",
    "ipython>=9.11.0",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.19",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "wikipedia>=1.4.0",
]
